#pragma once

#include <QCalendarWidget>
#include <QDate>

class CustomCalendarWidget : public QCalendarWidget {
  Q_OBJECT

public:
  explicit CustomCalendarWidget(int carId, QWidget *parent = nullptr);

protected:
  void showEvent(QShowEvent *event) override;

private:
  int carId_;
  bool isDateBooked(const QDate &date) const;
};
