@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam linetype ortho
skinparam roundcorner 4
skinparam shadowing false
skinparam packageStyle rectangle
skinparam package {
    BackgroundColor #F0F0F0
    BorderColor #999999
    FontStyle bold
    FontSize 10
    Padding 2
}
skinparam class {
    BackgroundColor #E8F4F8
    BorderColor #2E86AB
    ArrowColor #2E86AB
    FontSize 9
    Padding 4
    AttributeFontSize 8
    MethodFontSize 8
}

skinparam arrow {
    Thickness 1
    FontSize 8
}

skinparam maxMessageSize 60

top to bottom direction

' ============================================
' QT BASE CLASSES (LEFT)
' ============================================
package "Qt Base Classes" #F5F5F5 {
  class QMainWindow
  class QDialog
  class QWidget
  class QObject
  class QCalendarWidget
  class QSqlQueryModel
  class QSqlDatabase
}

' ============================================
' DATA STRUCTURES (LEFT CENTER)
' ============================================
package "Data Structures" #DDDDDD {
  struct CarInfo {
    + int id
    + QString brand
    + QString model
    + int year
    + double pricePerDay
    + int quantity
    + QString description
    + bool available
    + QString imagePath
    + bool bookmarked
    + QString engineType
    + double engineCapacityL
    + int powerHp
    + int seats
  }

  struct CatalogFilters {
    + QString searchText
    + QString engineType
    + int seatsMin
    + int powerMin
    + double capacityMin
  }

  class "SessionManager::SessionData" as SessionData {
    + int customerId
    + QString name
  }

  class "RentalCalculator::DateNormalization" as DateNormalization {
    + QDate start
    + QDate end
    + bool startClamped
    + bool endClamped
    + bool endAdjusted
  }

  struct "MainWindowImpl::UIWidgets" as UIWidgets {
    + QWidget* centralWidget_
    + QTabWidget* tabs_
    + QScrollArea* scrollArea_
    + QWidget* carsContainer_
    + QWidget* rentalsWidget_
    + QWidget* bookmarksContainer_
    + QWidget* bmInner_
  }

  struct "MainWindowImpl::UIFilters" as UIFilters {
    + QLineEdit* searchEdit_
    + QComboBox* engineTypeFilter_
    + QSpinBox* seatsMinFilter_
    + QSpinBox* powerMinFilter_
    + QDoubleSpinBox* capacityMinFilter_
  }

  struct "MainWindowImpl::UIButtons" as UIButtons {
    + QPushButton* myRentalsBtn_
    + QPushButton* logoutBtn_
  }
}

' ============================================
' EXCEPTIONS (LEFT BOTTOM)
' ============================================
package "Exceptions" #FFE6E6 {
  class AppException {
    - QString message_
    - QByteArray utf8Message_
    + AppException(message)
    + getMessage() : QString
    + what() : const char*
  }

  class DatabaseException {
    - QString operation_
    + DatabaseException(operation, details)
    + getOperation() : QString
  }

  class FileLoadException {
    - QString filePath_
    + FileLoadException(filePath, reason)
    + getFilePath() : QString
  }

  class ValidationException {
    - QString field_
    + ValidationException(field, reason)
    + getField() : QString
  }
}

' ============================================
' UI LAYER (CENTER)
' ============================================
package "UI Layer" #E8F4F8 {
  class MainWindow {
    - int currentCustomerId_
    - QString currentCustomerName_
    - QString currentCurrency_
    - MainWindowImpl::UIWidgets ui_
    - MainWindowImpl::UIFilters filters_
    - MainWindowImpl::UIButtons buttons_
    - QLabel* welcomeLabel_
    - QComboBox* currencyBox_
    - QTableView* rentalsTable_
    - std::unique_ptr<CarCardsView> carsView_
    - std::unique_ptr<CarCardsView> bookmarksView_
    - std::unique_ptr<CarsCatalogController> catalogController_
    - RentalsModel* rentalsModel_
    + MainWindow(parent)
    + ~MainWindow()
    - setupUI()
    - loadCars()
    - loadBookmarks()
    - showLogin()
    - updateCurrencyForAllCards()
    - tryAutoLogin()
    - connectFilters()
    - initializeUserSession()
    - currentFilters() : CatalogFilters
    - loadCarsToView(view, loadFunction)
    + onCarRentClicked(carId)
    + onBookmarkToggled(carId, bookmarked)
    + onShowMyRentals()
    + onShowBookmarks()
    + onCurrencyChanged()
    + onLogout()
  }

  class CarCardWidget {
    - CarInfo* carData_
    - QString currentCurrency_
    - QLabel* imageLabel_
    - QLabel* nameLabel_
    - QLabel* priceLabel_
    - QLabel* descLabel_
    - QFrame* detailsPopup_
    - QLabel* detailsLabel_
    - QPushButton* rentBtn_
    - QToolButton* bookmarkBtn_
    + CarCardWidget(car, currency, parent)
    + updateCurrency(currency)
    + updateBookmarkStatus(bookmarked)
    + getCarId() : int {const}
    + eventFilter(obj, event) : bool
    - setupImageLabel(layout)
    - setupNameLabel(layout)
    - setupPriceLabel(layout)
    - setupDescLabel(layout)
    - setupDetailsPopup()
    - setupButtons(layout)
    - connectSignals()
    - updatePriceDisplay()
    - showDetailsTooltip()
    - hideDetailsTooltip()
    - updateBookmarkButton()
    --
    signal rentClicked(carId)
    signal bookmarkToggled(carId, bookmarked)
  }

  class CarCardsView {
    - QWidget* container_
    - QGridLayout* layout_
    - int columns_
    - QString currentCurrency_
    - QList<CarCardWidget*> cards_
    + CarCardsView(container, columns)
    + setCurrency(currency)
    + showCars<T>(cars, binder)
    + clear()
    + forEachCard<T>(visitor)
  }

  class RentalDialog {
    - CarInfo* car_
    - int customerId_
    - QString currentCurrency_
    - QDateEdit* startDateEdit_
    - QDateEdit* endDateEdit_
    - QLabel* totalPriceLabel_
    - QLabel* specsLabel_
    - RentalCalculator calculator_
    + RentalDialog(car, customerId, currency, parent)
    - setupCarHeader(layout)
    - setupCarSpecs(layout)
    - setupDateForm(layout)
    - setupPriceLabel(layout)
    - setupButtons(layout)
    - setupConnections()
    - onRent()
    - updatePrice()
  }

  class LoginDialog {
    - QLineEdit* nameEdit_
    - QLineEdit* phoneEdit_
    - QLineEdit* passwordEdit_
    - QLineEdit* passwordRepeatEdit_
    - QLabel* nameLabel_
    - QLabel* passwordRepeatLabel_
    - QPushButton* loginBtn_
    - QPushButton* registerBtn_
    - QPushButton* tabLogin_
    - QPushButton* tabRegister_
    - QString name_
    - QString phone_
    - int customerId_
    + LoginDialog(parent)
    + ~LoginDialog()
    + getCustomerName() : QString {const}
    + getCustomerId() : int {const}
    - setupHeader(layout)
    - setupTabs(layout)
    - setupForm(layout)
    - setupActionButtons(layout)
    - setupConnections()
    - onLogin()
    - onRegister()
  }

  class CustomCalendarWidget {
    - int carId_
    + CustomCalendarWidget(carId, parent)
    # showEvent(event)
    - isDateBooked(date) : bool {const}
  }

  class RentalsModel {
    - QString currentCurrency_
    - CurrencyConverter* converter_
    + RentalsModel(parent)
    + setCurrency(currency)
    + refresh(customerId)
    + data(index, role) : QVariant {const}
    + headerData(section, orientation, role) : QVariant {const}
  }
}

' ============================================
' BUSINESS LOGIC (CENTER RIGHT)
' ============================================
package "Business Logic" #FFF4E6 {
  class CarsCatalogController {
    - CatalogFilters filters_
    + setFilters(filters)
    + getFilters() : CatalogFilters
    + loadAvailable(customerId) : QList<CarInfo> {const}
    + loadBookmarked(customerId) : QList<CarInfo> {const}
    - mapModelToCars(model) : QList<CarInfo> {const}
    - passesFilters(car) : bool {const}
  }

  class RentalCalculator {
    + normalizeDates(start, end, current, max) : DateNormalization {const}
    + rentalDays(start, end) : int {const}
    + totalBasePrice(car, days) : double {const}
    + formattedTotal(car, days, currency) : QString {const}
    - dayLabel(days) : QString {const}
  }
}

' ============================================
' DATABASE LAYER (RIGHT)
' ============================================
package "Database Layer" #E6F3E6 {
  class Database {
    - QSqlDatabase db_
    - std::unique_ptr<SchemaManager> schemaManager_
    - std::unique_ptr<CarSeeder> carSeeder_
    - std::unique_ptr<CarsRepository> carsRepository_
    - std::unique_ptr<CustomersRepository> customersRepository_
    - std::unique_ptr<RentalsRepository> rentalsRepository_
    + {static} instance() : Database&
    + ~Database()
    + initialize()
    + getAvailableCars(customerId) : std::unique_ptr<QSqlQueryModel>
    + getBookmarked(customerId) : std::unique_ptr<QSqlQueryModel>
    + getCar(id, customerId) : CarInfo
    + getAvailableQuantity(carId, startDate, endDate) : int
    + setBookmarked(carId, customerId, bookmarked) : bool
    + addCustomer(name, phone, passwordHash) : int
    + findCustomerByPhoneAndPassword(phone, passwordHash) : int
    + createRental(carId, customerId, startDate, endDate, totalPrice) : int
    + updateExpiredRentals()
    + database() : QSqlDatabase&
  }

  class CarsRepository {
    - QSqlDatabase& db_
    + CarsRepository(db)
    + fetchAvailableCars(customerId) : std::unique_ptr<QSqlQueryModel> {const}
    + fetchBookmarkedCars(customerId) : std::unique_ptr<QSqlQueryModel> {const}
    + findCar(id, customerId) : CarInfo {const}
    + availableQuantity(carId, startDate, endDate) : int {const}
    + setBookmarked(carId, customerId, bookmarked) : bool {const}
  }

  class CustomersRepository {
    - QSqlDatabase& db_
    + CustomersRepository(db)
    + addCustomer(name, phone, passwordHash) : int {const}
    + findCustomerByPhoneAndPassword(phone, passwordHash) : int {const}
  }

  class RentalsRepository {
    - QSqlDatabase& db_
    + RentalsRepository(db)
    + createRental(carId, customerId, startDate, endDate, totalPrice) : int {const}
    + updateExpiredRentals() {const}
  }

  class SchemaManager {
    + ensureSchema(db) : bool {const}
    - createTables(db) : bool {const}
    - createIndexes(db) {const}
  }

  class CarSeeder {
    + seedIfEmpty(db) {const}
    + populateSpecs(db) {const}
    - hasCars(db) : bool {const}
    - insertCar(db, data) : bool {const}
    - determineSpecs(brand, model, suvKeys) : CarSpecs {const}
  }
}

' ============================================
' UTILITIES (FAR RIGHT)
' ============================================
package "Utilities" #F0E6FF {
  class CurrencyConverter {
    - double usdToEur_
    - double usdToByn_
    + {static} instance() : CurrencyConverter&
    + fromBase(usdAmount, to) : double {const}
    + toBase(amount, from) : double {const}
    + symbol(currency) : QString {const}
    + code(currency) : QString {const}
    + {static} fromString(str) : Currency
  }

  class SessionManager {
    + {static} instance() : SessionManager&
    + loadSession(data) : bool {const}
    + saveSession(customerId, name) {const}
    + clearSession() {const}
    - sessionFilePath() : QString {const}
  }

  class CarImageLoader {
    + {static} loadCardImage(resourcePath, targetSize) : QPixmap
    - resolveKey(resourcePath) : QString
    - roundCorners(source, radius) : QPixmap
  }

  class CarDetailsFormatter {
    + {static} tooltipText(car) : QString
    + {static} name(car) : QString
  }

  class PathsConfig {
    + {static} dataDir() : QString
    + {static} databaseFile() : QString
    + {static} sessionFile() : QString
    + {static} photosDir() : QString
    + {static} placeholderImage() : QString
  }
}

' ============================================
' INHERITANCE
' ============================================
MainWindow --|> QMainWindow
LoginDialog --|> QDialog
RentalDialog --|> QDialog
CarCardWidget --|> QWidget
CarCardsView --|> QObject
CustomCalendarWidget --|> QCalendarWidget
RentalsModel --|> QSqlQueryModel
DatabaseException --|> AppException
FileLoadException --|> AppException
ValidationException --|> AppException

' ============================================
' COMPOSITION
' ============================================
MainWindow *-- CarCardsView
MainWindow *-- CarsCatalogController
MainWindow *-- RentalsModel
MainWindow *-- UIWidgets
MainWindow *-- UIFilters
MainWindow *-- UIButtons
RentalDialog *-- CustomCalendarWidget
RentalDialog *-- RentalCalculator
Database *-- SchemaManager
Database *-- CarSeeder
Database *-- CarsRepository
Database *-- CustomersRepository
Database *-- RentalsRepository
CarsCatalogController *-- CatalogFilters
CarCardWidget *-- CarInfo
RentalDialog *-- CarInfo
RentalsModel *-- CurrencyConverter

' ============================================
' ASSOCIATIONS
' ============================================
MainWindow --> LoginDialog : uses
MainWindow --> RentalDialog : opens
MainWindow --> Database : uses
MainWindow --> CurrencyConverter : uses
MainWindow --> SessionManager : uses
MainWindow --> DatabaseException : catches
MainWindow --> AppException : catches

CarCardsView --> CarCardWidget : creates

CarCardWidget --> CurrencyConverter : uses
CarCardWidget --> CarImageLoader : uses
CarCardWidget --> CarDetailsFormatter : uses
CarCardWidget --> CarInfo : uses
CarCardWidget --> FileLoadException : catches

RentalDialog --> Database : uses
RentalDialog --> CurrencyConverter : uses
RentalDialog --> CarInfo : uses
RentalDialog --> RentalCalculator : uses
RentalDialog --> DatabaseException : catches

CustomCalendarWidget --> Database : uses

LoginDialog --> Database : uses
LoginDialog --> SessionManager : uses
LoginDialog --> DatabaseException : catches

CarsCatalogController --> Database : uses
CarsCatalogController --> CarInfo : returns
CarsCatalogController --> CatalogFilters : uses

Database --> CarsRepository : delegates (unique_ptr)
Database --> CustomersRepository : delegates
Database --> RentalsRepository : delegates
Database --> SchemaManager : uses
Database --> CarSeeder : uses
Database --> DatabaseException : throws

CarsRepository --> QSqlQueryModel : returns (unique_ptr)
CarsRepository --> QSqlDatabase : uses
CarsRepository --> CarInfo : returns

CustomersRepository --> QSqlDatabase : uses
CustomersRepository --> DatabaseException : throws

RentalsRepository --> QSqlDatabase : uses
RentalsRepository --> DatabaseException : throws

SchemaManager --> QSqlDatabase : uses
SchemaManager --> DatabaseException : throws

CarSeeder --> QSqlDatabase : uses

RentalCalculator --> CurrencyConverter : uses
RentalCalculator --> CarInfo : uses
RentalCalculator --> DateNormalization : returns

SessionManager --> SessionData : uses
SessionManager --> PathsConfig : uses

CarImageLoader --> PathsConfig : uses
CarImageLoader --> FileLoadException : throws

CarDetailsFormatter --> CarInfo : uses

@enduml
